--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8">
 
-  <title>CodePen - Parallax scroll animation</title>
+  <title>Profile</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
 
